# ALG_COMP_GRAF

./: README.md  sdlmf.txt  trach_lab_4.txt
lab 1/laxer/: main.tex
lab 1/src/: CMakeLists.txt  main.cpp
lab 2/laxer/: main.tex
lab 2/src/: CMakeLists.txt  main.cpp
lab 3/laxer/: main.tex
lab 3/src/: CMakeLists.txt  main.cpp
lab 4_old/src/: CMakeLists.txt  main.cpp  main2.cpp
lab_4/laxer/: main.tex
lab_4/src/: main.py
lab_5/laxer/: main.tex
lab_5/src/: main.py
lab_6/src/: CMakeLists.txt  main.cpp  main3.cpp
lab_7/laxer/: main.tex
lab_7/src/: main.cpp  main_2.cpp  main_display_list.cpp  main_occlusion_query.cpp  main_shaders.cpp  main_vertex_arrays.cpp
lab_8/laxer/: main.tex
lab_8/src/: CMakeLists.txt  main.cpp
